# Smooth-Facial-Tracking

./: .gitignore  CMakeLists.txt  README.md  basic_face_detection.cpp  improved_face_detection.cpp  smooth_face_tracking.cpp
